# SAE360CP-12x-12N

./: i2c.ino
Core/Inc/: main.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
enc4ROS/Core/Inc/: stm32l4xx_it.h
enc4ROS/Core/Src/: main.c  stm32l4xx_hal_msp.c
serial_example/: CMakeLists.txt
serial_example/src/: ser_pubsub.cpp  serial_example_node2.cpp
